--- a/.github/workflows/diagram.yml
+++ b/.github/workflows/diagram.yml
@@ -2,8 +2,8 @@ name: Create diagram
 on:
   workflow_dispatch: {}
   push:
-    branches:
-      - main
+    paths:
+      - '*/**'
 jobs:
   get_data:
     runs-on: ubuntu-latest
